# gea-rw

./: .gitignore  Procfile  README.md  estudio  gea.sqlite3  manage.py  pyproject.toml  requirements.gea  requirements.txt  requirements.txt.old  requirements.venv
estudio/: asgi.py  local_settings.py  settings.py  urls.py  wsgi.py
estudio_/: settings.py  urls.py  wsgi.py
gea/: admin.py  apps.py  forms.py  formset_layout.py  models.py  preferences.py  urls.py  views.py
gea/migrations/: 0009_expediente_personas.py  0010_expediente_lugares.py  0011_auto_20210331_0332.py  0012_remove_expediente_fecha_plano.py  0013_auto_20210402_0130.py  0014_auto_20210402_0201.py  0015_auto_20210404_1817.py  0016_auto_20210407_0023.py  0017_auto_20210407_0224.py  0018_auto_20210426_1505.py  0019_auto_20210503_1215.py  0020_alter_objeto_nombre.py
gea/static/css/: bootstrap.growth.min.css  bootstrap.harbor.min.css  bootstrap.neon-glow.min.css  bootstrap.wizardry.min.css
gea/static/django_select2/: django_select2.css
gea/templates/: base.html  index.html
gea/templates/gea/: catastros_locales.html  expediente_confirm_delete.html  expediente_detail.html  expediente_form.html  expediente_list.html  expedientelugar_confirm_delete.html  expedientelugar_form.html  expedientepartida_confirm_delete.html  expedientepersona_confirm_delete.html  partida_to_expediente.html  persona_confirm_delete.html  persona_detail.html  persona_list.html  persona_to_expediente.html  plano_form.html
gea/templates/gea/doc/: solic.html  solic_form.html  visac.html  visac_form.html
gea/templates/gea/tools/: caratula.dxf  caratula.html  caratula_form.html
gea/templates/helpers/: _page_select_control.html  add_form_button.html  datepicker.css.html  datepicker.js.html  paginate_by_control.html  pagination_bar.html  search_control.html
gea/templates/includes/: topbar.html
gea/templates/registration/: logged_out.html  login.html
gea/templatetags/: tags.py
media/: planos  set
