[tool.poetry]
name = "gea"
version = "0.2.52"
description = "Gestión de Expedientes de Agrimensores"
authors = ["Santiago Pestarini <santiagonob@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/quijot/gea-package"
packages = [{ include = "gea" }]

[tool.poetry.dependencies]
python = "^3.9.14"
Django = "^4"
psycopg2 = "^2.9"
dj-database-url = "^0.5"
gunicorn = "^20.1"
whitenoise = "^5.3"
django-nested-admin = "^3.4"
django-extensions = "^3.1"
django-crispy-forms = "^1.14"
django-dynamic-preferences = "^1.11"
django-select2 = "^7.9"
django-redis = "^5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
flake8 = "^3.9"
black = "^>20.8b1"
ipython = "^7.28"
pydot = "^1.4"
coverage = "^5.5"

[tool.black]
line-length = 119
target-version = ["py36"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
