[tool.poetry]
name = "gea"
version = "0.2.52"
description = "Gestión de Expedientes de Agrimensores"
authors = ["Santiago Pestarini <santiagonob@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/quijot/gea-package"
packages = [{ include = "gea" }]

[tool.poetry.dependencies]
python = "=3.11.5"
dj-database-url = "^1.0.0"
Django = "^4"
django-crispy-forms = "^1.14.0"
django-dynamic-preferences = "^1.14.0"
django-extensions = "^3.2.1"
django-nested-admin = "^3.4"
django-redis = "^5.2.0"
django-select2 = "^7.10.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.4"
whitenoise = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
black = "^22.10.0"
ipython = "^8.5.0"
pydot = "^1.4.2"
coverage = "^6.5.0"

[tool.black]
line-length = 119
target-version = ["py36"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
