[tool.poetry]
name = "gea"
version = "0.2.52"
description = "Gestión de Expedientes de Agrimensores"
authors = ["Santiago Pestarini <santiagonob@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/quijot/gea-package"
packages = [{ include = "gea" }]

[tool.poetry.dependencies]
python = "=3.13.3"
dj-database-url = "^2"
Django = "^5"
django-crispy-forms = "^1"
# crispy-bootstrap4 = "^2024"
django-dynamic-preferences = "^1"
django-extensions = "^3"
django-nested-admin = "^4"
django-redis = "^5"
django-select2 = "^8"
gunicorn = "23.0.0"
psycopg2 = "^2"
whitenoise = "^6"
pytz = "^2025.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
flake8 = "^7"
black = "^24"
ipython = "^8"
pydot = "^2"
coverage = "^7"

[tool.black]
line-length = 119
target-version = ["py36"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
